--- a/index.html
+++ b/index.html
@@ -6,12 +6,32 @@
 </head>
 <body>
 
-<p>Нажмите на кнопку ниже, чтобы заданный скрипт выполнился.</p>
-<input type='button' value='Нажмите на меня' onclick='showMessage()'>
+<p>ЖУРНАЛ записи</p>
+
 <script>
-function showMessage() {
-  alert('Вы нажали на кнопку!')
+// Arrow function to get all the GET parameters
+getParameters = () => {
+  
+    // Address of the current window
+    address = window.location.search
+  
+    // Returns a URLSearchParams object instance
+    parameterList = new URLSearchParams(address)
+  
+    // Created a map which holds key value pairs
+    let map = new Map()
+  
+    // Storing every key value pair in the map
+    parameterList.forEach((value, key) => {
+        map.set(key, value)
+    })
+  
+    // Returning the map of GET parameters
+    return map
 }
+  
+// Gets all the getParameters
+console.log(getParameters())
 </script>
 
 </body>
